# drf_openbudget

./: .gitignore  TODO  docker-compose.yml  pyproject.toml  requirements.txt  shipropka.py
apps/: admin.py  filters.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  throttle.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_product_owner.py  0002_product_price.py  0002_usefulinfo.py  0003_district_region_responsibleperson_district_region.py  0003_testproduct.py  0004_product_productimage.py  0004_remove_new_image.py  0005_alter_new_options_new_is_premium.py
apps/tests/: test_auth.py  test_region.py
root/: settings.py  urls.py  wsgi.py
